--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:09:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:10</td>   <td>11334</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoTest()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">crmLogoTest</td> 
-  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:10</td>   <td>11434</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:11</td>   <td>12256</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:21</td>   <td>22536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">loginPageTest</td> 
-  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:21</td>   <td>22582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:22</td>   <td>23402</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:30</td>   <td>31753</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">loginTest</td> 
-  <td>main@1991371192</td>   <td></td> </tr>
-<tr bgcolor="736ca5">  <td>18/10/28 13:10:37</td>   <td>38473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testdata.LoginPageTest@4659191b]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1991371192</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:19:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:04</td>   <td>11737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">crmLogoTest</td> 
+  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:04</td>   <td>11816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:05</td>   <td>12615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:18</td>   <td>25344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">loginPageTest</td> 
+  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:18</td>   <td>25358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:19</td>   <td>26148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:30</td>   <td>37143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">loginTest</td> 
+  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:37</td>   <td>44794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
 </table>
