--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:19:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:04</td>   <td>11737</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.crmLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">crmLogoTest</td> 
-  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:04</td>   <td>11816</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:05</td>   <td>12615</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:18</td>   <td>25344</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">loginPageTest</td> 
-  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:18</td>   <td>25358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:19</td>   <td>26148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:30</td>   <td>37143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">loginTest</td> 
-  <td>main@658532887</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/28 13:20:37</td>   <td>44794</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@55634720]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@658532887</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/30 22:13:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@613298587</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/30 22:14:08</td>   <td>19238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selctContactTest()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">selctContactTest</td> 
+  <td>main@613298587</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/30 22:14:08</td>   <td>19382</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@613298587</td>   <td></td> </tr>
+<tr bgcolor="ad9bc1">  <td>18/10/30 22:14:29</td>   <td>40421</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">verifyContactsPageTest</td> 
+  <td>main@613298587</td>   <td></td> </tr>
 </table>
