--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ad9bc1">  <td>18/10/30 22:14:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.selctContactTest()[pri:1, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">selctContactTest</td> 
-  <td>main@613298587</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/30 22:13:49</td>   <td>-19238</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@613298587</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/30 22:14:08</td>   <td>144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@613298587</td>   <td></td> </tr>
-<tr bgcolor="ad9bc1">  <td>18/10/30 22:14:29</td>   <td>21183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@1b11171f]">verifyContactsPageTest</td> 
-  <td>main@613298587</td>   <td></td> </tr>
+<tr bgcolor="996a6c">  <td>18/11/03 22:49:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@73e9cf30]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@485937598</td>   <td></td> </tr>
+<tr bgcolor="996a6c">  <td>18/11/03 22:49:38</td>   <td>38022</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@73e9cf30]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@485937598</td>   <td></td> </tr>
+<tr bgcolor="996a6c">  <td>18/11/03 22:49:38</td>   <td>37856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.verifyContactsPageTest()[pri:2, instance:com.crm.qa.testcases.ContactsPageTest@73e9cf30]">verifyContactsPageTest</td> 
+  <td>main@485937598</td>   <td></td> </tr>
 </table>
