--- a/test-output/old/FREE CRM Application Test Automation Test Suite/classes.html
+++ b/test-output/old/FREE CRM Application Test Automation Test Suite/classes.html
@@ -56,6 +56,10 @@
 <td>verifyContactsPageTest</td>
 <td>&nbsp;</td></tr>
 <tr>
+<td>&nbsp;</td>
+<td>createNewContactTest</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
